package com.example.demo.uml;

/**
 * @Author: 凤凰[小哥哥]
 * @Date: 2020/4/14 10:11
 * @Email: 15290810931@163.com
 */
public abstract class AbstractPayAliGlobalPayService extends AbstractPayService{
}
