package com.example.demo.uml;

/**
 * @Author: 凤凰[小哥哥]
 * @Date: 2020/4/14 10:12
 * @Email: 15290810931@163.com
 */
public interface IPayService {

    void pay();
}
