@startuml

class ExtendServer

interface IPayHandler

abstract class AbstractPayAliGlobalPayService
abstract class AbstractPayService
class AliGlobalPayExtendServer
class PayGateWayComponent
class PayAliGlobalPayService
class PayService
interface IPayService


PayService --->ExtendServer

AbstractPayService ....|> IPayHandler
AbstractPayService ---|> ExtendServer

PayService  --> PayGateWayComponent
PayGateWayComponent --> PayAliGlobalPayService
PayAliGlobalPayService ---|>AbstractPayAliGlobalPayService
AbstractPayAliGlobalPayService --->AliGlobalPayExtendServer
AbstractPayAliGlobalPayService ---|> AbstractPayService

IPayService <|.... PayService





@enduml